<resources>
    <string name="app_name">DuckyDoc</string>
    <string name="login_email">Email</string>
    <string name="login_psw">Password</string>
    <string name="login">Login</string>
    <string name="login_google">Login con Google</string>
    <string name="home_discovery">Scopri un modo innovativo per condividere appunti</string>
    <string name="search">Cerca</string>
    <string name="home_look">Dai un occhiata!</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="logout">Logout</string>
    <string name="storicoDocument">Storico Documenti</string>
    <string name="storicoQuery">Storico Domande</string>
    <string name="storicoAnswer">Storico Risposte</string>
    <string name="correct">Correct</string>
    <string name="risposte">Risposte</string>
    <string name="documenti">Documenti</string>
    <string name="QA">Q&amp;A</string>
    <string name="piu">+</string>
    <string name="add_query">Aggiungi Query</string>
    <string name="qa_filter">QA filtro</string>
    <string name="cerca">Cerca</string>
    <string name="text">Scrivi testo</string>
    <string name="conferma">Conferma</string>
    <string name="rispondi">Rispondi</string>
    <string name="nuovo_documento">Nuovo documento</string>
    <string name="titolo">Titolo</string>
    <string name="universit">Università</string>
    <string name="prezzo">Prezzo</string>
    <string name="anno">Anno</string>
    <string name="descrizione_max_255_caratteri">Descrizione (max 255 caratteri)</string>
    <string name="add_document">Aggiungi document</string>
    <string name="corso">Corso</string>
    <string name="mostra_risultati">Mostra risultati</string>
    <string name="filter_document">Filtro documenti</string>
    <string name="home_image">Home image</string>
    <string name="query_and_answer_image">Query and Answer image</string>
    <string name="document_image">Document image</string>
    <string name="visualizza_recensioni">Visualizza recensioni</string>
    <string name="aggiungi_recensione">Aggiungi recensione</string>
    <string name="nuova_recensione">Nuova recensione</string>
    <string name="voto">Voto</string>
    <string name="nuovo_report">Nuovo report</string>
    <string name="inserisci_testo">Inserisci testo</string>
    <string name="aggiungi_report">Aggiungi report</string>
    <string name="esatta">Esatta</string>
    <string name="scegli_file">Scegli file</string>
</resources>