<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDocument">

    <Button
        android:id="@+id/btConferma"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Button"
        android:onClick="btConferma_Click"
        android:text="@string/conferma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescrizioneErr" />

    <TextView
        android:id="@+id/lblPrezzoErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtPrezzo"
        app:layout_constraintStart_toStartOf="@+id/txtPrezzo"
        app:layout_constraintTop_toBottomOf="@+id/txtPrezzo" />

    <EditText
        android:id="@+id/txtCorsoDocumento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/corso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtTitoloDocumento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtTitoloDocumento"
        app:layout_constraintTop_toBottomOf="@+id/lblUniversitaErr"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblCorsoErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtUniversitaDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtUniversitaDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtCorsoDocumento" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nuovo_documento"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTitoloDocumento"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/titolo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblTitoloErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtTitoloDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtTitoloDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtTitoloDocumento" />

    <EditText
        android:id="@+id/txtUniversitaDocumento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/universit"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtTitoloDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtTitoloDocumento"
        app:layout_constraintTop_toBottomOf="@+id/lblTitoloErr"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblUniversitaErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtUniversitaDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtUniversitaDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtUniversitaDocumento" />

    <Spinner
        android:id="@+id/cmbAnnoDocumento"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:entries="@array/years"/>

    <EditText
        android:id="@+id/txtPrezzo"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/prezzo"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCorsoErr"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anno"
        app:layout_constraintStart_toStartOf="@+id/cmbAnnoDocumento"
        app:layout_constraintTop_toTopOf="@+id/txtPrezzo" />

    <TextView
        android:id="@+id/lblAnnoErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/cmbAnnoDocumento"
        app:layout_constraintStart_toStartOf="@+id/cmbAnnoDocumento"
        app:layout_constraintTop_toBottomOf="@+id/cmbAnnoDocumento" />

    <EditText
        android:id="@+id/txtDescrizioneDocumento"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descrizione_max_255_caratteri"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAnnoErr"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblDescrizioneErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtDescrizioneDocumento"
        app:layout_constraintStart_toStartOf="@+id/txtDescrizioneDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtDescrizioneDocumento" />

    <TextView
        android:id="@+id/lblConfermaErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btConferma"
        app:layout_constraintStart_toStartOf="@+id/btConferma"
        app:layout_constraintTop_toBottomOf="@+id/btConferma" />

</androidx.constraintlayout.widget.ConstraintLayout>